@@ -1,3 +1,10 @@
+ENet 1.3.6 (December 11, 2012):
+
+* added support for intercept callback in ENetHost that can be used to process raw packets before ENet
+* added enet_socket_shutdown() for issuing shutdown on a socket
+* fixed enet_socket_connect() to not error on non-blocking connects
+* fixed bug in MTU negotiation during connections
+ 
 ENet 1.3.5 (July 31, 2012):
 
 * fixed bug in unreliable packet fragment queuing
